Agency parser tests ok.

--- a/badintel.cabal
+++ b/badintel.cabal
@@ -63,3 +63,4 @@ test-suite Tests
                        ,lens
                        ,badintel
                        ,mtl
+                       ,parsec
